[gd_scene load_steps=7 format=2]

[ext_resource path="res://dispenser/Dispenser.gd" type="Script" id=1]
[ext_resource path="res://dispenser/DispenserGlass.tscn" type="PackedScene" id=2]
[ext_resource path="res://dispenser/PipeFactory.tscn" type="PackedScene" id=3]
[ext_resource path="res://dispenser/DispenserTop.tscn" type="PackedScene" id=4]
[ext_resource path="res://dispenser/DispenserMid.tscn" type="PackedScene" id=5]
[ext_resource path="res://dispenser/DispenserBottom.tscn" type="PackedScene" id=6]

[node name="Dispenser" type="Node2D"]

script = ExtResource( 1 )
Glass = ExtResource( 2 )

[node name="PipeFactory" parent="." index="0" instance=ExtResource( 3 )]

[node name="Overlay" type="Node2D" parent="." index="1"]

editor/display_folded = true
z_index = 2
_sections_unfolded = [ "Z Index" ]

[node name="DispenserTop" parent="Overlay" index="0" instance=ExtResource( 4 )]

z_index = 2
_sections_unfolded = [ "Material", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="DispenserMid" parent="Overlay" index="1" instance=ExtResource( 5 )]

position = Vector2( 0, 300 )
z_index = 2
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="PipeQueue" type="Node2D" parent="." index="2"]

z_index = 1
_sections_unfolded = [ "Z Index" ]

[node name="Underlay" type="Node2D" parent="." index="3"]

_sections_unfolded = [ "Z Index" ]

[node name="DispenserBottom" parent="Underlay" index="0" instance=ExtResource( 6 )]

position = Vector2( 0, 300 )


